--- a/package.json
+++ b/package.json
@@ -14,47 +14,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.4",
-    "@angular/common": "~9.0.0-rc.4",
-    "@angular/compiler": "~9.0.0-rc.4",
-    "@angular/core": "~9.0.0-rc.4",
-    "@angular/forms": "~9.0.0-rc.4",
-    "@angular/platform-browser": "~9.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.4",
-    "@angular/router": "~9.0.0-rc.4",
-    "@schematics/angular": "^9.1.1",
-    "@scullyio/init": "0.0.25",
+    "@angular/animations": "~9.1.6",
+    "@angular/common": "~9.1.6",
+    "@angular/compiler": "~9.1.6",
+    "@angular/core": "~9.1.6",
+    "@angular/forms": "~9.1.6",
+    "@angular/platform-browser": "~9.1.6",
+    "@angular/platform-browser-dynamic": "~9.1.6",
+    "@angular/router": "~9.1.6",
+    "@schematics/angular": "^9.1.5",
+    "@scullyio/init": "0.0.26",
     "@scullyio/ng-lib": "latest",
     "@scullyio/scully": "latest",
-    "rxjs": "~6.5.3",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "~6.5.5",
+    "tslib": "^1.11.2",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.4",
-    "@angular/cli": "~9.0.0-rc.4",
-    "@angular/compiler-cli": "~9.0.0-rc.4",
-    "@angular/language-service": "~9.0.0-rc.4",
+    "@angular-devkit/build-angular": "~0.901.5",
+    "@angular/cli": "~9.1.5",
+    "@angular/compiler-cli": "~9.1.6",
+    "@angular/language-service": "~9.1.6",
     "@schuchard/prettier": "^3.1.0",
-    "@types/jasmine": "~3.4.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/jasmine": "~3.5.10",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^13.13.5",
+    "codelyzer": "^5.2.2",
     "husky": "4.2.5",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.0.5",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "lint-staged": "10.1.3",
-    "prettier": "2.0.4",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "lint-staged": "10.2.2",
+    "prettier": "2.0.5",
+    "protractor": "~5.4.4",
+    "ts-node": "~8.10.1",
+    "tslint": "~6.1.2",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "~3.6.4"
+    "typescript": "~3.8.3"
   },
   "husky": {
     "hooks": {
