--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "scully": "scully",
-    "scully:serve": "scully serve"
+    "scully:serve": "scully serve --watch"
   },
   "private": true,
   "dependencies": {
